--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.6.6'
+    id 'org.springframework.boot' version '2.6.9'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
@@ -56,7 +56,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.squareup.okhttp3:okhttp:4.0.0'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.2'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.9'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     implementation 'org.postgresql:postgresql:42.2.25'
     implementation 'com.jcabi:jcabi-manifests:1.1'
@@ -69,7 +69,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
     testImplementation("com.squareup.okhttp3:mockwebserver:4.0.0")
-    testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.6.4'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation("com.h2database:h2")
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
